# miam.quest

./: .browserslistrc  CLAUDE.md  CONTENT_CREATION_PLAN.md  CONTENT_PLAN.md  PRD.md  next.config.ts  package-lock.json  package.json
agent/: Dockerfile  Procfile  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
agent/src/: __init__.py  agent.py  main.py  state.py
agent/src/tools/: __init__.py  miam.py
migrations/: 003_create_miam_schema.sql  004_create_pages.sql
public/: llms.txt
scripts/: generate-pdfs.ts  insert-page.ts  insert-seo-pages.ts
src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/app/[...slug]/: page.tsx
src/app/api/copilotkit/: route.ts
src/app/api/hume-token/: route.ts
src/app/auth/[path]/: page.tsx
src/app/chat/: layout.tsx  page.tsx
src/app/child-maintenance-calculator/: page.tsx
src/app/commercial/: page.tsx
src/app/contact/: page.tsx
src/app/forms/c100/: page.tsx
src/app/holiday-let/: page.tsx
src/app/london/: page.tsx
src/app/mediation/cost/: page.tsx
src/app/mediation/what-is-mediation/: page.tsx
src/app/mediation/workplace/: page.tsx
src/app/miam/certificate/: page.tsx
src/app/privacy/: page.tsx
src/app/profile/: page.tsx
src/app/refund/: page.tsx
src/app/terms/: page.tsx
src/app/wales/: page.tsx
src/components/: BetaBanner.tsx  ChildMaintenanceCalculator.tsx  CopilotChatWrapper.tsx  Disclaimer.tsx  Footer.tsx  LazyChat.tsx  Navigation.tsx  VoiceInput.tsx  providers.tsx
src/lib/: db.ts  prompts.ts  seo.ts  types.ts
(+2 files in other folders)
