[project]
name = "stamp-duty-agent"
version = "0.1.0"
description = "UK Stamp Duty Calculator Agent - CopilotKit + Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "fastapi",
    "starlette",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[google]",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
