[project]
name = "miam-quest-agent"
version = "0.1.0"
description = "MIAM.quest Agent - AI-powered mediation preparation assistant"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "fastapi",
    "starlette",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[google]",
    "python-dotenv",
    "zep-cloud",
    "psycopg2-binary",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
